<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/actitivy_padding"
    android:gravity="center_horizontal"
    tools:context="com.studycase.vanard.vianrasyiddiyatma_1202154186_modul1.MainActivity">

    <TextView
        android:id="@+id/main_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:text="@string/makan_malam_text" />

    <TextView
        android:id="@+id/sub_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_textview"
        android:gravity="center"
        android:textSize="15sp"
        android:text="@string/text_milea"
        android:layout_marginBottom="50dp"/>

    <EditText
        android:id="@+id/first_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sub_textview"
        android:text="@string/menu"
        android:layout_marginBottom="25dp"
        android:hint="@string/menu_makanan_edittext"/>

    <EditText
        android:id="@+id/second_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_edittext"
        android:text="@string/porsi"
        android:layout_marginBottom="20dp"
        android:hint="@string/porsi_makanan_edittext"/>

    <LinearLayout
        android:layout_below="@id/second_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/eatbus_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/placeOne"
            android:onClick="placeOne"/>

        <Button
            android:id="@+id/abnormal_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/placeTwo"
            android:onClick="placeTwo"/>

    </LinearLayout>

</RelativeLayout>
